--- a/index.html
+++ b/index.html
@@ -32,9 +32,27 @@
             font-weight: bold;
             color: #154360;
         }
+        .cta {
+            text-align: center;
+            margin: 30px 0;
+        }
+        .cta a {
+            display: inline-block;
+            background-color: #3498db;
+            color: white;
+            padding: 15px 30px;
+            text-decoration: none;
+            border-radius: 8px;
+            font-size: 18px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            transition: background-color 0.3s ease;
+        }
+        .cta a:hover {
+            background-color: #2980b9;
+        }
         main {
             padding: 20px;
-            max-width: 1000px;
+            max-width: 1100px;
             margin: auto;
         }
         section {
@@ -42,7 +60,7 @@
         }
         img {
             width: 80%;
-            max-width: 700px;
+            max-width: 600px;
             margin: 20px auto;
             display: block;
             border-radius: 12px;
@@ -58,21 +76,14 @@
         a:hover {
             text-decoration: underline;
         }
-        .cta-button {
-            display: inline-block;
-            background-color: #3498db;
-            color: white;
-            padding: 15px 30px;
-            text-decoration: none;
-            border-radius: 8px;
-            font-size: 18px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            transition: background-color 0.3s ease;
-            margin: 20px auto;
-            text-align: center;
+        .flex-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 40px;
         }
-        .cta-button:hover {
-            background-color: #2980b9;
+        .flex-item {
+            flex: 1;
+            min-width: 300px;
         }
         footer {
             text-align: center;
@@ -87,70 +98,69 @@
         <h1>Střední odborná škola Mittani, z.ú.</h1>
         <p>Moderní vzdělávání propojené s praxí</p>
     </header>
+
     <div class="announcement">
         Ekonomické lyceum plánujeme otevřít ve školním roce 2026/2027.<br>
         <strong>Kurzy začínají již v květnu 2025 – jsme aktivní už teď!</strong>
     </div>
+
+    <div class="cta">
+        <a href="https://www.sosmittani.com" target="_blank">Více informací na www.sosmittani.com</a>
+    </div>
+
     <main>
         <section>
             <p>Střední odborná škola Mittani, z.ú., je vzdělávací instituce, která plánuje zahájit svou činnost ve školním roce 2026/2027. Škola klade důraz na propojení teoretického vzdělávání s praktickými zkušenostmi a individuálním přístupem k žákům.</p>
         </section>
-        <img src="pexels-karolina-grabowska-8147395.jpg" alt="Studentka">
+
+        <img src="pexels-karolina-grabowska-8147395.jpg" alt="Žákyně s knihou">
+
+        <div class="flex-container">
+            <div class="flex-item">
+                <h2>Ekonomické lyceum</h2>
+                <p><strong>Denní forma:</strong> Kombinuje všeobecné vzdělání s ekonomickými předměty.</p>
+                <ul>
+                    <li><strong>Sportovní hokejová třída:</strong> Pro žáky se zájmem o hokej, kteří chtějí skloubit sportovní kariéru se studiem.</li>
+                    <li><strong>Ekonomicko-technologická třída:</strong> Pro žáky se zájmem o ekonomiku a technologie.</li>
+                </ul>
+                <p><strong>Dálková forma:</strong> Studium při zaměstnání nebo jiných povinnostech.</p>
+            </div>
+            <div class="flex-item">
+                <h2>Přípravné a odborné kurzy</h2>
+                <h3>Přípravné kurzy:</h3>
+                <ul>
+                    <li>Přípravka na gymnázium (5. ročník ZŠ)</li>
+                    <li>Přípravka na střední školu (8. ročník ZŠ)</li>
+                    <li>Přípravka na střední školu (9. ročník ZŠ)</li>
+                    <li>Přípravka pro sportovce v 9. ročníku</li>
+                </ul>
+                <h3>Kurzy a semináře:</h3>
+                <ul>
+                    <li>Kurz účetnictví</li>
+                    <li>Kurz mzdového účetnictví</li>
+                    <li>Seminář: Exekuční srážky ze mzdy 2025</li>
+                    <li>Roboti v akci</li>
+                    <li>Python je jízda</li>
+                    <li>Od nápadu k modelu</li>
+                    <li>AI – Tvůj studijní parťák</li>
+                </ul>
+            </div>
+        </div>
+
+        <img src="pexels-max-fischer-5212663.jpg" alt="Dvě žákyně u tabule">
+
         <section>
-            <h2>Nabízené programy:</h2>
-            <p><strong>Ekonomické lyceum (denní forma):</strong> Tento program kombinuje všeobecné vzdělání s ekonomickými předměty. Nabízí dvě specializace:</p>
-            <ul>
-                <li><strong>Sportovní hokejová třída:</strong> Určena pro studenty se zájmem o hokej, kteří chtějí skloubit sportovní kariéru se studiem.</li>
-                <li><strong>Ekonomicko-technologická třída:</strong> Zaměřena na studenty se zájmem o ekonomiku a technologie.</li>
-            </ul>
-            <p><strong>Ekonomické lyceum (dálková forma):</strong> Umožňuje studium při zaměstnání či jiných povinnostech.</p>
-        </section>
-        <img src="470211566_122147453612334376_1354095330938828618_n.jpg" alt="Logo">
-        <section>
-            <h2>Přípravné kurzy:</h2>
-            <ul>
-                <li>Přípravka na gymnázium pro 5. ročník</li>
-                <li>Přípravka na střední školu pro 8. ročník</li>
-                <li>Přípravka na střední školu pro 9. ročník</li>
-                <li>Přípravka pro sportovce v 9. ročníku</li>
-            </ul>
-        </section>
-        <img src="pexels-ivan-samkov-5676743.jpg" alt="Výuka">
-        <section>
-            <h2>Kurzy a semináře pro profesní růst:</h2>
-            <ul>
-                <li>Kurz účetnictví</li>
-                <li>Kurz mzdového účetnictví</li>
-                <li>Seminář "Exekuční srážky ze mzdy v roce 2025"</li>
-            </ul>
-        </section>
-        <img src="pexels-ivan-samkov-5676744.jpg" alt="Studenti">
-        <section>
-            <h2>Technologické kurzy:</h2>
-            <ul>
-                <li>Roboti v akci</li>
-                <li>Python je jízda</li>
-                <li>Od nápadu k modelu</li>
-                <li>AI – Tvůj studijní parťák</li>
-            </ul>
-        </section>
-        <img src="pexels-max-fischer-5212663.jpg" alt="Dívky u tabule">
-        <section>
-            <h2>Kontaktní informace:</h2>
+            <h2>Kontaktní informace</h2>
             <p><strong>Adresa:</strong> Žižkova 600, 664 01 Bílovice nad Svitavou<br>
-            <strong>Telefon:</strong> 773 62 33 37<br>
-            <strong>E-mail:</strong> <a href="mailto:studijni@sosmittani.cz">studijni@sosmittani.cz</a></p>
-        </section>
-        <section>
-            <p>Střední odborná škola Mittani, z.ú., se profiluje jako moderní vzdělávací instituce, která propojuje školu, praxi a kariéru, a nabízí širokou škálu programů a kurzů pro různé cílové skupiny.</p>
+               <strong>Telefon:</strong> 773 62 33 37<br>
+               <strong>E-mail:</strong> <a href="mailto:studijni@sosmittani.cz">studijni@sosmittani.cz</a></p>
         </section>
 
-        <div style="text-align:center;">
-            <a href="https://www.sosmittani.com" target="_blank" class="cta-button">
-                Více informací na www.sosmittani.com
-            </a>
+        <div class="cta">
+            <a href="https://www.sosmittani.com" target="_blank">Více informací na www.sosmittani.com</a>
         </div>
     </main>
+
     <footer>
         &copy; 2025 Střední odborná škola Mittani, z.ú. | <a href="https://www.sosmittani.com">www.sosmittani.com</a>
     </footer>
