--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
             padding: 0;
             color: #2c3e50;
         }
-        header {
-            background: #b0d4f1;
-            padding: 40px 20px;
+        .hero {
+            background: url('470211566_122147453612334376_1354095330938828618_n.jpg') center/cover no-repeat;
+            height: 400px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            text-shadow: 0 0 10px rgba(0,0,0,0.7);
             text-align: center;
         }
-        header h1 {
+        .hero h1 {
+            font-size: 3em;
             margin: 0;
-            font-size: 2.5em;
         }
-        header p {
-            font-size: 1.2em;
+        .hero p {
+            font-size: 1.3em;
         }
         .announcement {
             background-color: #d6eaf8;
@@ -55,8 +61,14 @@
             max-width: 1100px;
             margin: auto;
         }
-        section {
-            margin-bottom: 40px;
+        .flex-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 40px;
+        }
+        .flex-item {
+            flex: 1;
+            min-width: 300px;
         }
         img {
             width: 80%;
@@ -69,22 +81,6 @@
         h2 {
             color: #1b4f72;
         }
-        a {
-            color: #007acc;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .flex-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 40px;
-        }
-        .flex-item {
-            flex: 1;
-            min-width: 300px;
-        }
         footer {
             text-align: center;
             background-color: #d4e6f1;
@@ -94,10 +90,10 @@
     </style>
 </head>
 <body>
-    <header>
+    <div class="hero">
         <h1>Střední odborná škola Mittani, z.ú.</h1>
         <p>Moderní vzdělávání propojené s praxí</p>
-    </header>
+    </div>
 
     <div class="announcement">
         Ekonomické lyceum plánujeme otevřít ve školním roce 2026/2027.<br>
@@ -112,8 +108,6 @@
         <section>
             <p>Střední odborná škola Mittani, z.ú., je vzdělávací instituce, která plánuje zahájit svou činnost ve školním roce 2026/2027. Škola klade důraz na propojení teoretického vzdělávání s praktickými zkušenostmi a individuálním přístupem k žákům.</p>
         </section>
-
-        <img src="pexels-karolina-grabowska-8147395.jpg" alt="Žákyně s knihou">
 
         <div class="flex-container">
             <div class="flex-item">
