--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Střední odborná škola Mittani</title>
+    <title>Ekonomické lyceum a kurzy – SOŠ Mittani, Bílovice nad Svitavou</title>
+    <meta name="description" content="Střední odborná škola Mittani nabízí denní a dálkové ekonomické lyceum, přípravné kurzy na gymnázium a SŠ, a odborné kurzy účetnictví, mzdového účetnictví, IT a robotiky.">
+    <meta name="keywords" content="střední škola Bílovice, ekonomické lyceum, hokejová třída, přípravné kurzy, kurzy účetnictví, dálkové studium, robotika, programování, gymnázium příprava">
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -70,14 +72,6 @@
             flex: 1;
             min-width: 300px;
         }
-        img {
-            width: 80%;
-            max-width: 600px;
-            margin: 20px auto;
-            display: block;
-            border-radius: 12px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.2);
-        }
         h2 {
             color: #1b4f72;
         }
@@ -92,7 +86,7 @@
 <body>
     <div class="hero">
         <h1>Střední odborná škola Mittani, z.ú.</h1>
-        <p>Moderní vzdělávání propojené s praxí</p>
+        <p>Moderní vzdělávání propojené s praxí – Bílovice nad Svitavou</p>
     </div>
 
     <div class="announcement">
@@ -101,13 +95,13 @@
     </div>
 
     <div class="cta">
-        <a href="https://www.sosmittani.com" target="_blank">Více informací na www.sosmittani.com</a>
+        <a href="https://www.sosmittani.com" target="_blank">Přejít na hlavní stránky školy</a>
     </div>
 
     <main>
         <div class="flex-container">
             <div class="flex-item">
-                <h2>Ekonomické lyceum</h2>
+                <h2>Ekonomické lyceum – denní i dálkové studium</h2>
                 <p><strong>Denní forma:</strong> Kombinuje všeobecné vzdělání s ekonomickými předměty.</p>
                 <ul>
                     <li><strong>Sportovní hokejová třída:</strong> Pro žáky se zájmem o hokej, kteří chtějí skloubit sportovní kariéru se studiem.</li>
@@ -116,7 +110,7 @@
                 <p><strong>Dálková forma:</strong> Studium při zaměstnání nebo jiných povinnostech.</p>
             </div>
             <div class="flex-item">
-                <h2>Přípravné a odborné kurzy</h2>
+                <h2>Přípravné kurzy na gymnázium a SŠ + odborné kurzy</h2>
                 <h3>Přípravné kurzy:</h3>
                 <ul>
                     <li>Přípravka na gymnázium (5. ročník ZŠ)</li>
@@ -137,17 +131,15 @@
             </div>
         </div>
 
-        <img src="pexels-max-fischer-5212663.jpg" alt="Dvě žákyně u tabule">
-
         <section>
-            <h2>Kontaktní informace</h2>
+            <h2>Kontaktní informace – SOŠ Mittani</h2>
             <p><strong>Adresa:</strong> Žižkova 600, 664 01 Bílovice nad Svitavou<br>
                <strong>Telefon:</strong> 773 62 33 37<br>
                <strong>E-mail:</strong> <a href="mailto:studijni@sosmittani.cz">studijni@sosmittani.cz</a></p>
         </section>
 
         <div class="cta">
-            <a href="https://www.sosmittani.com" target="_blank">Více informací na www.sosmittani.com</a>
+            <a href="https://www.sosmittani.com" target="_blank">Zjistit více na www.sosmittani.com</a>
         </div>
     </main>
 
