--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
             </div>
         </div>
 
+        <img src="zaci_na_web.png" alt="Žáci školy Mittani" style="width: 80%%; max-width: 600px; display: block; margin: 40px auto; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+
         <section>
             <h2>Kontaktní informace – SOŠ Mittani</h2>
             <p><strong>Adresa:</strong> Žižkova 600, 664 01 Bílovice nad Svitavou<br>
