--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <li><strong>Ekonomicko-technologická třída:</strong> Pro žáky se zájmem o ekonomiku a technologie.</li>
                 </ul>
                 <p><strong>Dálková forma:</strong> Studium při zaměstnání nebo jiných povinnostech.</p>
+    <img src="./zaci_na_web.png" alt="Žáci školy Mittani" style="width: 100%%; max-width: 500px; display: block; margin: 20px auto; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
             </div>
             <div class="flex-item">
                 <h2>Přípravné kurzy na gymnázium a SŠ + odborné kurzy</h2>
@@ -131,7 +132,7 @@
             </div>
         </div>
 
-        <img src="./zaci_na_web.png" alt="Žáci školy Mittani" style="width: 80%%; max-width: 600px; display: block; margin: 40px auto; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+        <img src="zaci_na_web.png" alt="Žáci školy Mittani" style="width: 80%%; max-width: 600px; display: block; margin: 40px auto; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
 
         <section>
             <h2>Kontaktní informace – SOŠ Mittani</h2>
