--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <main>
         <div class="flex-container">
             <div class="flex-item">
+                
                 <h2>Ekonomické lyceum – denní i dálkové studium</h2>
                 <p><strong>Denní forma:</strong> Kombinuje všeobecné vzdělání s ekonomickými předměty.</p>
                 <ul>
@@ -108,7 +109,8 @@
                     <li><strong>Ekonomicko-technologická třída:</strong> Pro žáky se zájmem o ekonomiku a technologie.</li>
                 </ul>
                 <p><strong>Dálková forma:</strong> Studium při zaměstnání nebo jiných povinnostech.</p>
-    <img src="./zaci_na_web.png" alt="Žáci školy Mittani" style="width: 100%%; max-width: 500px; display: block; margin: 20px auto; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+                <p>Výuka v obou formách je koncipována moderně a flexibilně – důraz klademe na digitální gramotnost, praktické uplatnění znalostí a podporu samostatného myšlení. Žáci budou pracovat na projektech, které propojují teorii s reálnými situacemi z praxe. V odpoledních blocích mohou využít volitelné semináře či sportovní specializace podle svých zájmů. Studium je vhodné i pro žáky, kteří uvažují o dalším vysokoškolském studiu, nebo chtějí podnikat.</p>
+
             </div>
             <div class="flex-item">
                 <h2>Přípravné kurzy na gymnázium a SŠ + odborné kurzy</h2>
