--- a/index.html
+++ b/index.html
@@ -3,153 +3,141 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Ekonomické lyceum a kurzy – SOŠ Mittani, Bílovice nad Svitavou</title>
-    <meta name="description" content="Střední odborná škola Mittani nabízí denní a dálkové ekonomické lyceum, přípravné kurzy na gymnázium a SŠ, a odborné kurzy účetnictví, mzdového účetnictví, IT a robotiky.">
-    <meta name="keywords" content="střední škola Bílovice, ekonomické lyceum, hokejová třída, přípravné kurzy, kurzy účetnictví, dálkové studium, robotika, programování, gymnázium příprava">
+    <title>SOŠ Mittani – Ekonomické lyceum a kurzy</title>
+    <meta name="description" content="Střední odborná škola Mittani v Bílovicích nad Svitavou nabízí ekonomické lyceum, dálkové studium a přípravné kurzy.">
+    <meta name="keywords" content="střední škola, ekonomické lyceum, dálkové studium, přípravka na gymnázium, kurzy účetnictví, SOŠ Mittani">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #e8f1f9;
+            font-family: Arial, sans-serif;
+            background-color: #eef5fb;
+            color: #2c3e50;
             margin: 0;
             padding: 0;
-            color: #2c3e50;
         }
-        .hero {
+        header {
             background: url('470211566_122147453612334376_1354095330938828618_n.jpg') center/cover no-repeat;
-            height: 400px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
             color: white;
-            text-shadow: 0 0 10px rgba(0,0,0,0.7);
             text-align: center;
+            padding: 100px 20px 60px;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
         }
-        .hero h1 {
-            font-size: 3em;
+        header h1 {
             margin: 0;
+            font-size: 2.8em;
         }
-        .hero p {
+        header p {
             font-size: 1.3em;
         }
         .announcement {
-            background-color: #d6eaf8;
+            background-color: #d0e7f9;
             text-align: center;
-            padding: 20px;
-            font-size: 1.2em;
+            padding: 15px;
+            font-size: 1.1em;
             font-weight: bold;
-            color: #154360;
+        }
+        main {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 30px;
+            gap: 30px;
+        }
+        section {
+            flex: 1 1 300px;
+            background-color: white;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 350px;
+        }
+        h2 {
+            color: #1a5276;
+        }
+        ul {
+            padding-left: 20px;
         }
         .cta {
             text-align: center;
-            margin: 30px 0;
+            margin: 40px;
         }
         .cta a {
-            display: inline-block;
             background-color: #3498db;
             color: white;
-            padding: 15px 30px;
             text-decoration: none;
-            border-radius: 8px;
-            font-size: 18px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            transition: background-color 0.3s ease;
-        }
-        .cta a:hover {
-            background-color: #2980b9;
-        }
-        main {
-            padding: 20px;
-            max-width: 1100px;
-            margin: auto;
-        }
-        .flex-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 40px;
-        }
-        .flex-item {
-            flex: 1;
-            min-width: 300px;
-        }
-        h2 {
-            color: #1b4f72;
+            padding: 12px 25px;
+            border-radius: 6px;
+            font-size: 1.1em;
         }
         footer {
+            background-color: #d6eaf8;
             text-align: center;
-            background-color: #d4e6f1;
             padding: 20px;
             font-size: 0.9em;
         }
     </style>
 </head>
 <body>
-    <div class="hero">
+    <header>
         <h1>Střední odborná škola Mittani, z.ú.</h1>
-        <p>Moderní vzdělávání propojené s praxí – Bílovice nad Svitavou</p>
-    </div>
+        <p>Moderní vzdělávání propojené s praxí</p>
+    </header>
 
     <div class="announcement">
-        Ekonomické lyceum plánujeme otevřít ve školním roce 2026/2027.<br>
-        <strong>Kurzy začínají již v květnu 2025 – jsme aktivní už teď!</strong>
+        Ekonomické lyceum od školního roku 2026/2027. Kurzy začínáme v květnu 2025!
     </div>
 
+    
     <div class="cta">
         <a href="https://www.sosmittani.com" target="_blank">Přejít na hlavní stránky školy</a>
     </div>
-
     <main>
-        <div class="flex-container">
-            <div class="flex-item">
-                
-                <h2>Ekonomické lyceum – denní i dálkové studium</h2>
-                <p><strong>Denní forma:</strong> Kombinuje všeobecné vzdělání s ekonomickými předměty.</p>
-                <ul>
-                    <li><strong>Sportovní hokejová třída:</strong> Pro žáky se zájmem o hokej, kteří chtějí skloubit sportovní kariéru se studiem.</li>
-                    <li><strong>Ekonomicko-technologická třída:</strong> Pro žáky se zájmem o ekonomiku a technologie.</li>
-                </ul>
-                <p><strong>Dálková forma:</strong> Studium při zaměstnání nebo jiných povinnostech.</p>
-                <p>Výuka v obou formách je koncipována moderně a flexibilně – důraz klademe na digitální gramotnost, praktické uplatnění znalostí a podporu samostatného myšlení. Žáci budou pracovat na projektech, které propojují teorii s reálnými situacemi z praxe. V odpoledních blocích mohou využít volitelné semináře či sportovní specializace podle svých zájmů. Studium je vhodné i pro žáky, kteří uvažují o dalším vysokoškolském studiu, nebo chtějí podnikat.</p>
-
-            </div>
-            <div class="flex-item">
-                <h2>Přípravné kurzy na gymnázium a SŠ + odborné kurzy</h2>
-                <h3>Přípravné kurzy:</h3>
-                <ul>
-                    <li>Přípravka na gymnázium (5. ročník ZŠ)</li>
-                    <li>Přípravka na střední školu (8. ročník ZŠ)</li>
-                    <li>Přípravka na střední školu (9. ročník ZŠ)</li>
-                    <li>Přípravka pro sportovce v 9. ročníku</li>
-                </ul>
-                <h3>Kurzy a semináře:</h3>
-                <ul>
-                    <li>Kurz účetnictví</li>
-                    <li>Kurz mzdového účetnictví</li>
-                    <li>Seminář: Exekuční srážky ze mzdy 2025</li>
-                    <li>Roboti v akci</li>
-                    <li>Python je jízda</li>
-                    <li>Od nápadu k modelu</li>
-                    <li>AI – Tvůj studijní parťák</li>
-                </ul>
-            </div>
-        </div>
-
-          style="width: 80%%; max-width: 600px; display: block; margin: 40px auto; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
-
         <section>
-            <h2>Kontaktní informace – SOŠ Mittani</h2>
-            <p><strong>Adresa:</strong> Žižkova 600, 664 01 Bílovice nad Svitavou<br>
-               <strong>Telefon:</strong> 773 62 33 37<br>
-               <strong>E-mail:</strong> <a href="mailto:studijni@sosmittani.cz">studijni@sosmittani.cz</a></p>
+            <h2>Ekonomické lyceum</h2>
+            <p>Poskytujeme denní i dálkovou formu studia. Výuka propojuje teorii s praxí.</p>
+            <p>Žáci se mohou profilovat ve sportovní nebo technologicko-ekonomické specializaci.</p>
+            <ul>
+                <li>Sportovní hokejová třída</li>
+                <li>Ekonomicko-technologická třída</li>
+            </ul>
         </section>
 
-        <div class="cta">
-            <a href="https://www.sosmittani.com" target="_blank">Zjistit více na www.sosmittani.com</a>
-        </div>
+        <section>
+            <h2>Přípravné kurzy</h2>
+            <p>Kurzům se věnujeme intenzivně a s individuálním přístupem. Připravíme žáky na úspěšné přijímací řízení.</p>
+            <p>Výuka probíhá v malých skupinách s důrazem na výsledky a motivaci.</p>
+            <ul>
+                <li>Přípravka na gymnázium (5. ročník ZŠ)</li>
+                <li>Přípravka na střední školu (8. ročník ZŠ)</li>
+                <li>Přípravka na střední školu (9. ročník ZŠ)</li>
+                <li>Přípravka pro sportovce v 9. ročníku</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Odborné kurzy</h2>
+            <p>Kurzy jsou určeny pro veřejnost i profesionály. Výuka je praktická a aktuální.</p>
+            <p>Zaměřujeme se na ekonomická, technologická a softwarová témata.</p>
+            <ul>
+                <li>Kurz účetnictví</li>
+                <li>Kurz mzdového účetnictví</li>
+                <li>Seminář: Exekuční srážky ze mzdy 2025</li>
+                <li>Roboti v akci</li>
+                <li>Python je jízda</li>
+                <li>Od nápadu k modelu</li>
+                <li>AI – Tvůj studijní parťák</li>
+            </ul>
+        </section>
     </main>
 
+    <div class="cta">
+        <a href="https://www.sosmittani.com" target="_blank">Přejít na hlavní web www.sosmittani.com</a>
+    </div>
+
     <footer>
-        &copy; 2025 Střední odborná škola Mittani, z.ú. | <a href="https://www.sosmittani.com">www.sosmittani.com</a>
+        <p><strong>Adresa:</strong> Žižkova 600, 664 01 Bílovice nad Svitavou</p>
+        <p><strong>Telefon:</strong> 773 62 33 37 | <strong>E-mail:</strong> <a href="mailto:studijni@sosmittani.cz">studijni@sosmittani.cz</a></p>
+        <p>&copy; 2025 SOŠ Mittani, z.ú. | www.sosmittani.com</p>
     </footer>
 </body>
 </html>
